<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.musicPlayer.MusicPlayer">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/player_controls_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/nav_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/a11y_favourite"
            android:padding="6dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/nav_back"
            android:text="@string/music_player"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/favorite_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/a11y_favourite"
            android:padding="6dp"
            android:src="@drawable/favorite_border_24" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/track_title_color"
            android:textSize="@dimen/player_song_title"
            android:textStyle="bold"
            tools:text="Song title" />

        <ImageView
            android:id="@+id/track_thumbnail"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/a11y_song_thumbnail"
            android:src="@drawable/placeholder" />

        <RelativeLayout
            android:id="@+id/player_controls_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="30dp">

            <SeekBar
                android:id="@+id/player_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/bg_player_progress_bar"
                android:progressTint="@color/player_controls_bg"
                android:splitTrack="false"
                android:thumb="@drawable/bg_player_progress_bar_thumb" />

            <TextView
                android:id="@+id/track_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_progress_bar"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:text="@string/song_duration_timer"
                android:textColor="@color/medium_gray" />

            <TextView
                android:id="@+id/track_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_progress_bar"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/song_duration_timer"
                android:textColor="@color/medium_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/track_total_time"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/previous"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/pause_play"
                    android:background="@drawable/bg_player_controls"
                    android:contentDescription="@string/a11y_play_previous_btn"
                    android:padding="10dp"
                    android:src="@drawable/rewind" />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/pause_play"
                    android:background="@drawable/bg_player_controls"
                    android:contentDescription="@string/a11y_play_next_btn"
                    android:padding="10dp"
                    android:src="@drawable/forward" />

                <ImageView
                    android:id="@+id/pause_play"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_player_controls"
                    android:contentDescription="@string/a11y_play_pause_btn"
                    android:padding="10dp"

                    android:src="@drawable/play" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>